--- a/FancyAnimation/Base.lproj/Main.storyboard
+++ b/FancyAnimation/Base.lproj/Main.storyboard
@@ -1,14 +1,19 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="FancyAnimation" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +21,148 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="R3e-bY-ZKi">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xFe-c6-KpA">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="297"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Header View" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eCZ-QY-53M">
+                                                <rect key="frame" x="124" y="136" width="128.5" height="26.5"/>
+                                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="22"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" red="0.89738935919999996" green="1" blue="0.99183074010000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstItem="eCZ-QY-53M" firstAttribute="centerY" secondItem="xFe-c6-KpA" secondAttribute="centerY" id="EK3-we-YWd"/>
+                                            <constraint firstAttribute="height" constant="297" id="bnS-OM-CSj"/>
+                                            <constraint firstItem="eCZ-QY-53M" firstAttribute="centerX" secondItem="xFe-c6-KpA" secondAttribute="centerX" id="l87-LH-G8d"/>
+                                        </constraints>
+                                    </view>
+                                    <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Jni-KF-o0f">
+                                        <rect key="frame" x="0.0" y="297" width="375" height="370"/>
+                                        <connections>
+                                            <segue destination="ftY-P7-FCz" kind="embed" id="Qxt-Re-iqX"/>
+                                        </connections>
+                                    </containerView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="R3e-bY-ZKi" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="EdX-Uw-iYS"/>
+                            <constraint firstAttribute="trailing" secondItem="R3e-bY-ZKi" secondAttribute="trailing" id="GYG-9R-711"/>
+                            <constraint firstItem="R3e-bY-ZKi" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="KrZ-cu-D9D"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="R3e-bY-ZKi" secondAttribute="bottom" id="UF7-ZD-8J1"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-132" y="139"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="8Bm-C0-ZS7">
+            <objects>
+                <viewController id="6Pa-g8-jjz" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="HSv-K6-d5D">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="370"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="A" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZcL-nV-5td">
+                                <rect key="frame" x="175.5" y="163.5" width="25" height="44.5"/>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="37"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Pj7-Ku-vC3">
+                                <rect key="frame" x="161" y="308" width="52" height="42"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <state key="normal" title="Next">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="NvR-J5-H7R" kind="show" id="8Ah-HI-4lr"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="0.94222193519999997" blue="0.93022841840000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="Pj7-Ku-vC3" firstAttribute="centerX" secondItem="HSv-K6-d5D" secondAttribute="centerX" id="D6w-dt-6gi"/>
+                            <constraint firstItem="ZcL-nV-5td" firstAttribute="centerY" secondItem="HSv-K6-d5D" secondAttribute="centerY" id="QCj-F3-bJh"/>
+                            <constraint firstItem="ZcL-nV-5td" firstAttribute="centerX" secondItem="HSv-K6-d5D" secondAttribute="centerX" id="T3C-dd-9Fa"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="Pj7-Ku-vC3" secondAttribute="bottom" constant="20" id="Umu-Tn-7pp"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="RXL-m1-QKe"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4xA-JX-7nL" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1326" y="139"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="BY4-0A-Q20">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" navigationBarHidden="YES" id="ftY-P7-FCz" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="vjt-3h-4Vz">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="6Pa-g8-jjz" kind="relationship" relationship="rootViewController" id="kcF-be-oHD"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tlA-1J-txM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="598" y="139"/>
+        </scene>
+        <!--Second View Controller-->
+        <scene sceneID="mmM-fu-SO5">
+            <objects>
+                <viewController id="NvR-J5-H7R" customClass="SecondViewController" customModule="FancyAnimation" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="ubK-cz-Knj"/>
+                        <viewControllerLayoutGuide type="bottom" id="1AS-gy-Sw0"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="gVq-wF-149">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="370"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="B" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0uS-aQ-BeF">
+                                <rect key="frame" x="175" y="162.5" width="24" height="45"/>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="37"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kvf-Km-PfA">
+                                <rect key="frame" x="159" y="308" width="56" height="42"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <state key="normal" title="Back">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="back" destination="NvR-J5-H7R" eventType="touchUpInside" id="nZK-9i-xkl"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="0.94222193519999997" blue="0.93022841840000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="0uS-aQ-BeF" firstAttribute="centerY" secondItem="gVq-wF-149" secondAttribute="centerY" id="AzH-w6-Qur"/>
+                            <constraint firstItem="kvf-Km-PfA" firstAttribute="centerX" secondItem="gVq-wF-149" secondAttribute="centerX" id="Ix7-KG-TcC"/>
+                            <constraint firstItem="1AS-gy-Sw0" firstAttribute="top" secondItem="kvf-Km-PfA" secondAttribute="bottom" constant="20" id="ZEZ-4r-eaW"/>
+                            <constraint firstItem="0uS-aQ-BeF" firstAttribute="centerX" secondItem="gVq-wF-149" secondAttribute="centerX" id="nTN-wl-lNA"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="7zG-At-DmM"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="008-cX-I87" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2060" y="139"/>
         </scene>
     </scenes>
 </document>
