--- a/FancyAnimation/Base.lproj/Main.storyboard
+++ b/FancyAnimation/Base.lproj/Main.storyboard
@@ -50,13 +50,41 @@
                                     </containerView>
                                 </subviews>
                             </stackView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="97l-3p-61i">
+                                <rect key="frame" x="299" y="272" width="50" height="50"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="p0M-wo-8fj">
+                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="19"/>
+                                        <state key="normal" title="+">
+                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="addButton" destination="BYZ-38-t0r" eventType="touchUpInside" id="uCP-pw-V7P"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" red="1" green="0.85615429835578505" blue="0.041238940710429217" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="50" id="L6z-hG-2oH"/>
+                                    <constraint firstAttribute="height" constant="50" id="V3A-iF-EEm"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="25"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="97l-3p-61i" secondAttribute="trailing" constant="10" id="8DU-iM-FVs"/>
                             <constraint firstItem="R3e-bY-ZKi" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="EdX-Uw-iYS"/>
                             <constraint firstAttribute="trailing" secondItem="R3e-bY-ZKi" secondAttribute="trailing" id="GYG-9R-711"/>
                             <constraint firstItem="R3e-bY-ZKi" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="KrZ-cu-D9D"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="R3e-bY-ZKi" secondAttribute="bottom" id="UF7-ZD-8J1"/>
+                            <constraint firstItem="97l-3p-61i" firstAttribute="bottom" secondItem="xFe-c6-KpA" secondAttribute="bottom" constant="25" id="eoN-a4-bPg"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -64,10 +92,10 @@
             </objects>
             <point key="canvasLocation" x="-132" y="139"/>
         </scene>
-        <!--View Controller-->
+        <!--First View Controller-->
         <scene sceneID="8Bm-C0-ZS7">
             <objects>
-                <viewController id="6Pa-g8-jjz" sceneMemberID="viewController">
+                <viewController id="6Pa-g8-jjz" customClass="FirstViewController" customModule="FancyAnimation" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="HSv-K6-d5D">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="370"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -78,26 +106,17 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Pj7-Ku-vC3">
-                                <rect key="frame" x="161" y="308" width="52" height="42"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
-                                <state key="normal" title="Next">
-                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <segue destination="NvR-J5-H7R" kind="show" id="8Ah-HI-4lr"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="0.94222193519999997" blue="0.93022841840000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="Pj7-Ku-vC3" firstAttribute="centerX" secondItem="HSv-K6-d5D" secondAttribute="centerX" id="D6w-dt-6gi"/>
                             <constraint firstItem="ZcL-nV-5td" firstAttribute="centerY" secondItem="HSv-K6-d5D" secondAttribute="centerY" id="QCj-F3-bJh"/>
                             <constraint firstItem="ZcL-nV-5td" firstAttribute="centerX" secondItem="HSv-K6-d5D" secondAttribute="centerX" id="T3C-dd-9Fa"/>
-                            <constraint firstAttribute="bottomMargin" secondItem="Pj7-Ku-vC3" secondAttribute="bottom" constant="20" id="Umu-Tn-7pp"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="RXL-m1-QKe"/>
+                    <connections>
+                        <segue destination="NvR-J5-H7R" kind="show" identifier="toB" id="nd5-o7-hHQ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4xA-JX-7nL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
