--- a/FancyAnimation/Base.lproj/Main.storyboard
+++ b/FancyAnimation/Base.lproj/Main.storyboard
@@ -29,7 +29,7 @@
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="297"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Header View" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eCZ-QY-53M">
-                                                <rect key="frame" x="124" y="136" width="128.5" height="26.5"/>
+                                                <rect key="frame" x="123.5" y="135.5" width="128.5" height="26.5"/>
                                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="22"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -51,25 +51,12 @@
                                     </containerView>
                                 </subviews>
                             </stackView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="97l-3p-61i">
+                            <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YSp-tI-tMh" customClass="AddButtonView" customModule="FancyAnimation" customModuleProvider="target">
                                 <rect key="frame" x="299" y="272" width="50" height="50"/>
-                                <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="p0M-wo-8fj">
-                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="19"/>
-                                        <state key="normal" title="+">
-                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
-                                        </state>
-                                        <connections>
-                                            <action selector="addButtonHandler" destination="BYZ-38-t0r" eventType="touchUpInside" id="vRx-Ud-yIc"/>
-                                        </connections>
-                                    </button>
-                                </subviews>
-                                <color key="backgroundColor" red="1" green="0.85615429835578505" blue="0.041238940710429217" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="backgroundColor" red="1" green="0.85615429840000001" blue="0.041238940709999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="50" id="L6z-hG-2oH"/>
-                                    <constraint firstAttribute="height" constant="50" id="V3A-iF-EEm"/>
+                                    <constraint firstAttribute="height" constant="50" id="Upg-OG-Kze"/>
+                                    <constraint firstAttribute="width" constant="50" id="h4m-Ib-jc7"/>
                                 </constraints>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
@@ -80,20 +67,57 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstAttribute="trailingMargin" secondItem="97l-3p-61i" secondAttribute="trailing" constant="10" id="8DU-iM-FVs"/>
+                            <constraint firstItem="Jni-KF-o0f" firstAttribute="top" secondItem="YSp-tI-tMh" secondAttribute="bottom" constant="-25" id="3ya-Ps-M0V"/>
                             <constraint firstItem="R3e-bY-ZKi" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="EdX-Uw-iYS"/>
                             <constraint firstAttribute="trailing" secondItem="R3e-bY-ZKi" secondAttribute="trailing" id="GYG-9R-711"/>
                             <constraint firstItem="R3e-bY-ZKi" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="KrZ-cu-D9D"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="R3e-bY-ZKi" secondAttribute="bottom" id="UF7-ZD-8J1"/>
-                            <constraint firstItem="97l-3p-61i" firstAttribute="bottom" secondItem="xFe-c6-KpA" secondAttribute="bottom" constant="25" id="eoN-a4-bPg"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="YSp-tI-tMh" secondAttribute="trailing" constant="10" id="b9j-V3-r5a"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="addButtonView" destination="97l-3p-61i" id="Eph-SS-LcF"/>
+                        <outlet property="addButtonView" destination="YSp-tI-tMh" id="Rep-qB-c1a"/>
                         <outlet property="containerView" destination="Jni-KF-o0f" id="RXm-rh-QD8"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <view contentMode="scaleToFill" id="R0s-Jf-YZB">
+                    <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <subviews>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AhY-K2-ofh">
+                            <rect key="frame" x="95" y="39" width="50" height="50"/>
+                            <subviews>
+                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0TH-lt-VZw">
+                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="19"/>
+                                    <state key="normal" title="+">
+                                        <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                    </state>
+                                    <connections>
+                                        <action selector="addButtonHandler" destination="BYZ-38-t0r" eventType="touchUpInside" id="iOR-qN-lxb"/>
+                                    </connections>
+                                </button>
+                            </subviews>
+                            <color key="backgroundColor" red="1" green="0.85615429840000001" blue="0.041238940709999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="50" id="S98-cl-lv6"/>
+                                <constraint firstAttribute="width" constant="50" id="Z9K-kK-j6X"/>
+                            </constraints>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                    <integer key="value" value="25"/>
+                                </userDefinedRuntimeAttribute>
+                            </userDefinedRuntimeAttributes>
+                        </view>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstItem="AhY-K2-ofh" firstAttribute="centerX" secondItem="R0s-Jf-YZB" secondAttribute="centerX" id="9MJ-CX-M6y"/>
+                        <constraint firstItem="AhY-K2-ofh" firstAttribute="centerY" secondItem="R0s-Jf-YZB" secondAttribute="centerY" id="wrF-iB-cKj"/>
+                    </constraints>
+                </view>
             </objects>
             <point key="canvasLocation" x="-132" y="139"/>
         </scene>
@@ -106,7 +130,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="A" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZcL-nV-5td">
-                                <rect key="frame" x="175.5" y="163.5" width="25" height="44.5"/>
+                                <rect key="frame" x="175" y="163" width="25" height="45"/>
                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="37"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -158,7 +182,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="B" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0uS-aQ-BeF">
-                                <rect key="frame" x="175" y="162.5" width="24" height="45"/>
+                                <rect key="frame" x="175" y="163" width="24" height="45"/>
                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="37"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
